@@ -11,6 +11,7 @@ opensesame (3.0.3~a2-ubuntu2) wily; urgency=medium
     - Don't crash when copy-pasting in loop table when no cells are selected (#374)
     - Fall back to z_index=0 when an invalid z_index has been specified for sketchpad elements (#375)
     - Don't crash on empty filename in image element in sketchpad (#377)
+    - Fix recursion error in overview area with multiple linked copies (#376)
   * Improvements
     - Fix templates for Python 3
     - Fix Exception handling for multiprocess_runner in Python 3
